# cafe

./: AGENTS.md  README.md  install.sh
.claude-plugin/: marketplace.json
cli/: Cargo.toml  README.md
cli/src/: main.rs
plugins/architecture/.claude-plugin/: plugin.json
plugins/architecture/skills/architecture/: SKILL.md
plugins/blueprint/commands/: blueprint.md
plugins/blueprint/skills/blueprint/: SKILL.md
plugins/claude-review/.claude-plugin/: plugin.json
plugins/claude-review/assets/: claude-code-review.yml  code-review.yml
plugins/claude-review/commands/: audit-all.md  audit.md  migrate-to-agents-md.md  pr.md  setup-review.md
plugins/clog/.claude-plugin/: plugin.json
plugins/clog/skills/clog/: SKILL.md
plugins/codex/.claude-plugin/: plugin.json
plugins/codex/skills/codex/: SKILL.md
plugins/distill/.claude-plugin/: plugin.json
plugins/distill/commands/: distill.md
plugins/distill/skills/distill/: SKILL.md
plugins/fable/.claude-plugin/: plugin.json
plugins/fable/hooks/: hooks.json
plugins/fable/skills/fable/: SKILL.md
plugins/glm/.claude-plugin/: plugin.json
plugins/glm/skills/glm/: SKILL.md
plugins/parallel/.claude-plugin/: plugin.json
plugins/parallel/commands/: parallel.md
plugins/parallel/skills/parallel/: SKILL.md
plugins/plainspeak/.claude-plugin/: plugin.json
plugins/plainspeak/hooks/: hooks.json
plugins/tech-stack/.claude-plugin/: plugin.json
plugins/todo/.claude-plugin/: plugin.json
plugins/todo/commands/: todo.md
plugins/todo/skills/todo/: SKILL.md
plugins/workflow/commands/: push.md  session.md
(+3 files in other folders)
