[package]
name = "cafe"
version = "0.1.0"
edition = "2021"
description = "Install cafe's skills into every AI coding agent on your machine"
license = "MIT"

[[bin]]
name = "cafe"
path = "src/main.rs"

[dependencies]
cliclack = "0.5"
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
